# logging_content

./: .gitignore  Cargo.toml  README.org
examples/: result_logging.rs
src/: lib.rs  option.rs  result.rs
